--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 body {
     background-color: #fff;
+    font-family: 'Roboto';
+    color: #212121;
 }
 /* Header */
 .header {
     text-decoration: none;
+    background: #FFFFFF;
 }
 
 .webstudio {
@@ -11,7 +14,7 @@ body {
         font-style: normal;
         font-weight: 700;
         font-size: 26px;
-        line-height: 31px;
+        line-height: 1.19;
         color: #212121;
         text-decoration: none;
 }
@@ -25,7 +28,7 @@ body {
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
-        line-height: 16px;
+        line-height: 1.14;
         letter-spacing: 0.02em;
         color: #212121;
 }
@@ -35,18 +38,25 @@ body {
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
-        line-height: 16px;
+        line-height: 1.14;
         letter-spacing: 0.02em;
         color: #757575;
 }
 
+.link-li:hover, .link-li:focus {
+    color: #2196F3;
+}
+
+.link:hover {
+    color: #2196F3;
+}
 /* Main */
 .decision {
     font-family: 'Roboto';
         font-style: normal;
         font-weight: 900;
         font-size: 44px;
-        line-height: 60px;
+        line-height: 1.36;
         text-align: center;
             letter-spacing: 0.06em;
             text-transform: uppercase;
@@ -67,15 +77,16 @@ body {
             border: none;
             cursor: pointer;
 }
-.btn:hover, btn:focus {
+.btn:hover, .btn:focus {
     color: #2196F3;
 }
+
 .menu {
     font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
         font-size: 14px;
-        line-height: 16px;
+        line-height: 1.14;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #212121;
@@ -85,7 +96,7 @@ body {
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
-        line-height: 24px;
+        line-height: 1.71;
         letter-spacing: 0.03em;
         color: #757575;
 }
@@ -94,7 +105,7 @@ body {
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
-        line-height: 42px;
+        line-height: 1.17;
         text-align: center;
         letter-spacing: 0.03em;
         color: #212121;
@@ -104,7 +115,7 @@ body {
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
-        line-height: 42px;
+        line-height: 1.17;
         text-align: center;
         letter-spacing: 0.03em;
         color: #212121;
@@ -115,7 +126,7 @@ body {
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
-        line-height: 19px;
+        line-height: 1.19;
         text-align: center;
         letter-spacing: 0.03em;
         color: #212121;
@@ -125,7 +136,7 @@ body {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        line-height: 19px;
+        line-height: 1.19;
         text-align: center;
         letter-spacing: 0.03em;
         color: #757575;
@@ -137,7 +148,7 @@ body {
         font-style: normal;
         font-weight: 700;
         font-size: 26px;
-        line-height: 31px;
+        line-height: 1.19;
         color: #FFFFFF;
         text-decoration: none;
 }
@@ -146,7 +157,7 @@ body {
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
-        line-height: 24px;
+        line-height: 1.71;
         letter-spacing: 0.03em;
         color: #FFFFFF;
 }
@@ -155,13 +166,49 @@ body {
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
-        line-height: 24px;
+        line-height: 1.71;
         letter-spacing: 0.03em;
         color: rgba(255, 255, 255, 0.6);
         text-decoration: none;
 }
-
+.email:hover, .email:focus {
+    color: #2196F3;
+}
 footer {
     background-color: #2F303A;
     
+}
+
+/* Portfolio */
+.btn-li {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.63;
+        letter-spacing: 0.03em;
+        border: none;
+        cursor: pointer;
+}
+.btn-li:hover, .btn-li:focus {
+    background-color: #2196F3;
+    color: #FFFFFF;
+}
+.title {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.88;
+        letter-spacing: 0.06em;
+        color: #212121;
+}
+.title-p {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.03em;
+        color: #757575;
 }
